补充： ThreadLocal ， 角色对应的权限管理 ， 从 yml 配置文件读取 角色权限设置 ， 登录拦截器 ， WebConfig 配置拦截器 ，PathConstant则是不需要token也可以访问的

--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -26,6 +26,29 @@ mybatis-plus:
       table-prefix: tb_  # 表名前缀为tb_，表名为前缀连接类名（小写）
 
 
+# 定义角色和路径权限的映射关系
+role-path-permissions:
+  permissions:
+    ROLE_ADMIN:
+      - "/admin/"
+      - "/playlist/"
+      - "/artist/"
+      - "/song/"
+      - "/favorite/"
+      - "/comment/"
+      - "/banner/"
+      - "/feedback/"
+    ROLE_USER:
+      - "/user/"
+      - "/playlist/"
+      - "/artist/"
+      - "/song/"
+      - "/favorite/"
+      - "/comment/"
+      - "/banner/"
+      - "/feedback/"
+
+
 # springdoc-openapi项目配置
 springdoc:
   swagger-ui:
