UserService , 引入了 java mail ， 不过现在处理到了一半

--- a/pom.xml
+++ b/pom.xml
@@ -89,6 +89,12 @@
             <version>4.4.0</version>
         </dependency>
 
+        <!--java mail依赖-->
+        <dependency>
+            <groupId>org.eclipse.angus</groupId>
+            <artifactId>jakarta.mail</artifactId>
+        </dependency>
+
 
 
     </dependencies>
