--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -15,6 +15,34 @@ spring:
       host: localhost
       port: 6379
       password:
+  servlet:
+    multipart:
+      max-file-size: 100MB # 设置最大上传文件大小为100MB
+      max-request-size: 1024MB # 设置最大请求大小为1024MB
+
+  # 配置邮件服务
+  mail:
+    # 配置邮箱账户和密码
+    host: smtp.example.com # 修改你的 SMTP 服务器地址
+    username: your-email@example.com # 修改你的邮箱账号
+    password: YOUR_EMAIL_APP_PASSWORD # 修改你的邮箱应用密码或授权码
+    protocol: smtp
+    properties:
+      mail:
+        smtp:
+          auth: true
+          starttls:
+            enable: true
+            required: true
+          ssl:
+            enable: true
+          socketFactory:
+            port: 465
+            class: javax.net.ssl.SSLSocketFactory
+          # 邮件服务超时时间配置
+          connectiontimeout: 5000
+          timeout: 3000
+          writetimeout: 5000
 
 # 配置 mybatis-plus
 mybatis-plus:
