修改 swagger 配置，创建分组，这样就有两个全局的 token ， 方便 user 和 admin 的 token 切换

--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -99,6 +99,9 @@ springdoc:
     - group: 'default'
       paths-to-match: '/**'
       packages-to-scan: com.kay.music.controller
+    - group: 'admin'
+      paths-to-match: '/admin/**'
+      packages-to-scan: com.kay.music.controller
 # knife4j的增强配置，不需要增强可以不配
 knife4j:
   enable: true
