增加 添加歌曲时根据数据文件查找元数据 的 单个和批量添加

--- a/pom.xml
+++ b/pom.xml
@@ -102,6 +102,13 @@
             <version>8.5.9</version>
         </dependency>
 
+        <!-- 解析 MP3 / FLAC 标签 -->
+        <dependency>
+            <groupId>net.jthink</groupId>
+            <artifactId>jaudiotagger</artifactId>
+            <version>3.0.1</version>
+        </dependency>
+
 
 
     </dependencies>
