完善歌单绑定接口与歌单接口： 1. 给 歌单 增加新列 user_id 2. 增加权限控制 ，仅有管理员和 歌单创建者可操作歌单 3. 完善 歌单绑定的 增删操作

--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -76,6 +76,7 @@ role-path-permissions:
       - "/comment/"
       - "/banner/"
       - "/feedback/"
+      - "/playlist-binding/"
     ROLE_USER:
       - "/user/"
       - "/playlist/"
@@ -85,6 +86,7 @@ role-path-permissions:
       - "/comment/"
       - "/banner/"
       - "/feedback/"
+      - "/playlist-binding/"
 
 
 # springdoc-openapi项目配置
