设置 yml 的 dev 与 local

--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -1,48 +1,14 @@
-server:
-  port: 8081
 spring:
-  # 配置数据源
-  datasource:
-    driver-class-name: com.mysql.cj.jdbc.Driver
-    url: jdbc:mysql://localhost:3306/vibemusic?useUnicode=true&characterEncoding=utf-8&useSSL=false # 修改你的 MySQL 地址和库名
-    username: root
-    password: 123456
-    type: com.alibaba.druid.pool.DruidDataSource # 配置连接池
-  # Redis服务连接配置
-  data:
-    redis:
-      database: 2
-      host: localhost
-      port: 6379
-      password:
+  profiles:
+    active: local  # 默认使用 local 配置，可改为 dev 或其他环境
+  
   servlet:
     multipart:
       max-file-size: 100MB # 设置最大上传文件大小为100MB
       max-request-size: 1024MB # 设置最大请求大小为1024MB
 
-  # 配置邮件服务
-  mail:
-    host: smtp.qq.com
-    port: 587
-    username: 3095438615@qq.com
-    password: kaodyhhprkrfdeaf   # QQ 邮箱授权码
-    protocol: smtp
-    default-encoding: UTF-8
-    properties:
-      mail:
-        # debug: true
-        smtp:
-          auth: true
-          starttls:
-            enable: true
-            required: true
-          ssl:
-            enable: false
-          # 邮件服务超时时间配置
-          connectiontimeout: 5000
-          timeout: 5000
-          writetimeout: 5000
-
+server:
+  port: 8081
 
 # 配置 mybatis-plus
 mybatis-plus:
@@ -53,15 +19,7 @@ mybatis-plus:
     db-config: # 数据库配置
       table-prefix: tb_  # 表名前缀为tb_，表名为前缀连接类名（小写）
 
-
-minio:
-  endpoint: http://localhost:9000 # 修改你的 MinIO 端点
-  accessKey: minioadmin # 修改你的 MinIO Access Key
-  secretKey: minioadmin # 修改你的 MinIO Secret Key
-  bucket: vibe-music-data # 确认 Bucket 名称与你创建的一致
-
 jwt:
-  secret_key: "VIBE_MUSIC"
   expiration_time: 168          # 过期时间 （h）
 
 # 定义角色和路径权限的映射关系
