--- a/.gitignore
+++ b/.gitignore
@@ -31,3 +31,8 @@ build/
 
 ### VS Code ###
 .vscode/
+
+### Local Configuration ###
+# 忽略本地私有配置文件
+application-local.yml
+src/main/resources/application-local.yml
