--- a/pom.xml
+++ b/pom.xml
@@ -109,6 +109,18 @@
             <version>3.0.1</version>
         </dependency>
 
+        <!-- hutool工具类 -->
+        <dependency>
+            <groupId>cn.hutool</groupId>
+            <artifactId>hutool-core</artifactId>
+            <version>5.8.26</version>
+        </dependency>
+        
+        <dependency>
+            <groupId>cn.hutool</groupId>
+            <artifactId>hutool-json</artifactId>
+            <version>5.8.26</version>
+        </dependency>
 
 
     </dependencies>
